public/css/style.css
/* ... */
html,
body {
    background-color: var(--color-background);
    color: var(--color-primary);
}

body {
    overflow: hidden; /* Hide scrollbars */
}

a {
    color: var(--color-theme);
}

.button {
    background-color: var(--color-background-button);
    color: var(--color-primary);
    border-color: var(--color-primary-deselected);
    border-radius: 0.05rem;
    border-width: 0.15rem;
    font-size: 1.8rem;
    line-height: 1.7rem;
    padding: 0rem 1rem;
    font-weight: initial;
    text-transform: none;
}

.button:hover {
    background-color: var(--color-background-light);
    border-color: var(--color-background-light-hover);
}

.button-light {
    background-color: var(--color-background-button-light);
}

.button-dark {
    background-color: var(--color-background-button-dark);
}

/* Components */

.app {
    display: flex;
    flex-flow: column;
}

.view {
    flex: 1 1 auto;
    position: relative;
    min-width: 32rem;
    width: 90%;
    max-width: 60rem;
    margin: 0 auto;
}

.nav {
    flex: 0 1 6rem;
    background-color: var(--color-background-nav);
    box-shadow: 0 0rem 0.2rem black;
    border-top: 0.1rem solid var(--color-border-nav);

    display: flex;
    justify-content: center;
}

.nav .nav-button {
    width: 7rem;
    height: 100%;
    margin: 0 0.7rem;
    position: relative;
    cursor: pointer;
    -webkit-tap-highlight-color: transparent;
}

.nav .nav-button span {
    position: absolute;
    left: 0;
    top: 3.3rem;
    width: 100%;
    font-size: 1.5rem;
    text-align: center;
    user-select: none;
    color: var(--color-primary-deselected);
}

.nav .nav-button svg {
    position: absolute;
    left: 1.75rem;
    top: 0.45rem;
    width: 3.5rem;
    height: 3.5rem;
    fill: var(--color-fill-icon);
}

.nav .nav-button.selected svg {
    filter: brightness(150%);
    transition: filter 0.2s;
}

.nav .nav-button.selected span {
    color: var(--color-primary-selected);
    transition: color 0.2s;
}

.tab-nav {
    flex: 0 1 5rem;
    background-color: var(--color-background-nav);
    box-shadow: 0 0rem 0.2rem black;
    border-bottom: 0.1rem solid var(--color-border-nav);

    display: flex;
    justify-content: center;
}

.tab-nav .tab-nav-button {
    margin: 0.7rem 1.05rem 0.5rem;
    font-size: 2.1rem;
    user-select: none;
    cursor: pointer;
    -webkit-tap-highlight-color: transparent;
    color: var(--color-primary-deselected);
}

.tab-nav .tab-nav-button.selected {
    color: var(--color-primary-selected);
    transition: color 0.2s;
}

.tab-splitter {
    flex: 0 0 0.3rem;
    margin-top: -1rem;
    margin-left: -150rem;
    width: 360rem;
    background-color: var(--color-primary-deselected);
}

.tab-heading {
    flex: 0 0 1rem;
    display: block;
    height: 4rem;
    width: 100%;
    font-size: 2rem;
    text-align: center;
}

/* Home view */

.home-title {
    width: 100%;
    text-align: center;
    margin-top: 4rem;
}

/* Sources tab */

.tab-contents {
    position: absolute;
    left: 0rem;
    right: 0rem;
    top: 0rem;
    bottom: 0rem;
    display: flex;
    flex-flow: column;
}

.tab-contents span {
    user-select: none;
}

.sources-summary {
    display: flex;
    width: 100%;
    height: 8.5rem;
    margin-top: 1rem;
    justify-content: center;
}

.sources-summary-icon {
    fill: var(--color-fill-icon);
    width: 6.5rem;
    height: 6.5rem;
    vertical-align: bottom;
}

.sources-summary-separator {
    width: 2rem;
}

.sources-summary-stat {
    font-size: 3.5rem;
    line-height: 6.5rem;
}

.sources-summary-stat-wide {
    min-width: 11.5rem;
    max-width: 11.5rem;
    text-align: right;
    display: inline-block;
}

.sources-summary-label {
    float: right;
    font-size: 1.5rem;
    line-height: 0.5rem;
    width: 8rem;
    margin-right: -0.8rem;
    text-align: center;
}

.collection-list {
    flex: auto;
    overflow-y: auto;
    margin: 1rem 0rem;
    padding: -1rem 0rem 0rem;
}

.collection-list > :last-of-type {
    margin: 0.5rem 0rem 0.3rem;
}

.no-source-data-message {
    display: block;
    color: var(--color-primary-deselected);
}

.no-source-data-message span {
    margin-left: 1.7rem;
}

.no-source-data-message ul {
    list-style-type: disc;
}

.no-source-data-message li {
    margin-left: 1.7rem;
    text-indent: -1.7rem;
    user-select: none;
}

.collection-item {
    position: relative;
    width: 100%;
    height: 6.25rem;
    margin: 0.5rem 0rem 1.1rem;
    border: 0.2rem solid var(--color-primary-deselected);
    background-color: var(--color-background-nav);
}

.collection-item * {
    position: absolute;

    font-size: 1.3rem;
}

.collection-item.selectable {
    background-color: var(--color-background-button);
}

.collection-item.selectable:hover {
    background-color: var(--color-background-light-hover);
}

.collection-item.selectable.selected {
    background-color: var(--color-background-button-dark);
    border-color: var(--color-background-light-hover);
}

.source-data-remove-button {
    right: 0.25rem;
    bottom: 1rem;
    width: 4.2rem;
    height: 4.2rem;
    transform: scale(0.75, 1);
    fill: var(--color-fill-icon);
}

.source-data-name {
    position: absolute;
    left: 1rem;
    top: 0.4rem;
    font-size: 1.8rem;
    width: calc(100% - 5rem);
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.source-data-date {
    position: absolute;
    left: 0.9rem;
    bottom: 0.7rem;
    font-size: 1.2rem;
}

.source-data-accounts {
    right: 11.4rem;
    bottom: 0.6rem;
}

.source-data-accounts-icon {
    position: absolute;
    right: 9.7rem;
    width: 1.7rem;
    height: 1.7rem;
    bottom: 0.8rem;
    fill: var(--color-fill-icon);
}

.source-data-transactions {
    right: 5.9rem;
    bottom: 0.6rem;
}

.source-data-transactions-icon {
    position: absolute;
    right: 4.1rem;
    width: 1.8rem;
    height: 1.8rem;
    bottom: 0.8rem;
    fill: var(--color-fill-icon);
}

.sources-entry {
    margin-bottom: 1.2rem;
}
/* ... */

